--- a/BedrockCLI.vcxproj
+++ b/BedrockCLI.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -140,14 +140,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="file_manager.cpp" />
     <ClCompile Include="help.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="new_item.cpp" />
     <ClCompile Include="program_arguments.cpp" />
+    <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="extern\cxxopts\include\cxxopts.hpp" />
+    <ClInclude Include="extern\nlohmann\single_include\nlohmann\json.hpp" />
+    <ClInclude Include="file_manager.hpp" />
     <ClInclude Include="help.hpp" />
     <ClInclude Include="main.hpp" />
+    <ClInclude Include="new_item.hpp" />
     <ClInclude Include="program_arguments.hpp" />
+    <ClInclude Include="utilities.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
