Added ANIM command

--- a/BedrockCLI.vcxproj
+++ b/BedrockCLI.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="animation.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="file_manager.cpp" />
     <ClCompile Include="help.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="animation.hpp" />
     <ClInclude Include="entity.hpp" />
     <ClInclude Include="extern\cxxopts\include\cxxopts.hpp" />
     <ClInclude Include="extern\nlohmann\single_include\nlohmann\json.hpp" />
