--- a/BedrockCLI.vcxproj
+++ b/BedrockCLI.vcxproj
@@ -143,30 +143,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="animation.cpp" />
-    <ClCompile Include="entity.cpp" />
-    <ClCompile Include="file_manager.cpp" />
-    <ClCompile Include="function.cpp" />
-    <ClCompile Include="help.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="block.cpp" />
-    <ClCompile Include="item.cpp" />
-    <ClCompile Include="program_arguments.cpp" />
-    <ClCompile Include="utilities.cpp" />
+    <ClCompile Include="src\animation.cpp" />
+    <ClCompile Include="src\block.cpp" />
+    <ClCompile Include="src\entity.cpp" />
+    <ClCompile Include="src\file_manager.cpp" />
+    <ClCompile Include="src\function.cpp" />
+    <ClCompile Include="src\help.cpp" />
+    <ClCompile Include="src\item.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\program_arguments.cpp" />
+    <ClCompile Include="src\utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="animation.hpp" />
-    <ClInclude Include="entity.hpp" />
-    <ClInclude Include="extern\cxxopts\include\cxxopts.hpp" />
-    <ClInclude Include="extern\nlohmann\single_include\nlohmann\json.hpp" />
-    <ClInclude Include="file_manager.hpp" />
-    <ClInclude Include="function.hpp" />
-    <ClInclude Include="help.hpp" />
-    <ClInclude Include="main.hpp" />
-    <ClInclude Include="block.hpp" />
-    <ClInclude Include="item.hpp" />
-    <ClInclude Include="program_arguments.hpp" />
-    <ClInclude Include="utilities.hpp" />
+    <ClInclude Include="src\includes\animation.hpp" />
+    <ClInclude Include="src\includes\block.hpp" />
+    <ClInclude Include="src\includes\entity.hpp" />
+    <ClInclude Include="src\includes\extern\cxxopts\include\cxxopts.hpp" />
+    <ClInclude Include="src\includes\extern\nlohmann\single_include\nlohmann\json.hpp" />
+    <ClInclude Include="src\includes\file_manager.hpp" />
+    <ClInclude Include="src\includes\function.hpp" />
+    <ClInclude Include="src\includes\help.hpp" />
+    <ClInclude Include="src\includes\item.hpp" />
+    <ClInclude Include="src\includes\main.hpp" />
+    <ClInclude Include="src\includes\program_arguments.hpp" />
+    <ClInclude Include="src\includes\utilities.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
