Added DMGS Command

--- a/BedrockCLI.vcxproj
+++ b/BedrockCLI.vcxproj
@@ -155,18 +155,16 @@
     <ClCompile Include="src\utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\includes\animation.hpp" />
-    <ClInclude Include="src\includes\block.hpp" />
-    <ClInclude Include="src\includes\entity.hpp" />
-    <ClInclude Include="src\includes\extern\cxxopts\include\cxxopts.hpp" />
-    <ClInclude Include="src\includes\extern\nlohmann\single_include\nlohmann\json.hpp" />
-    <ClInclude Include="src\includes\file_manager.hpp" />
-    <ClInclude Include="src\includes\function.hpp" />
-    <ClInclude Include="src\includes\help.hpp" />
-    <ClInclude Include="src\includes\item.hpp" />
-    <ClInclude Include="src\includes\main.hpp" />
-    <ClInclude Include="src\includes\program_arguments.hpp" />
-    <ClInclude Include="src\includes\utilities.hpp" />
+    <ClInclude Include="src\include\animation.hpp" />
+    <ClInclude Include="src\include\block.hpp" />
+    <ClInclude Include="src\include\entity.hpp" />
+    <ClInclude Include="src\include\file_manager.hpp" />
+    <ClInclude Include="src\include\function.hpp" />
+    <ClInclude Include="src\include\help.hpp" />
+    <ClInclude Include="src\include\item.hpp" />
+    <ClInclude Include="src\include\main.hpp" />
+    <ClInclude Include="src\include\program_arguments.hpp" />
+    <ClInclude Include="src\include\utilities.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
