--- a/BedrockCLI.vcxproj.filters
+++ b/BedrockCLI.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\include\extern\lodepng\lodepng.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\package_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\animation.hpp">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\include\extern\lodepng\lodepng.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\package_manager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
